# openfang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  openfang.toml.example  测试和运行说明.md
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: lib.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/js/: app.js
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/openfang-cli/: Cargo.toml
crates/openfang-cli/src/: bundled_agents.rs  launcher.rs  main.rs
crates/openfang-cli/src/tui/: event.rs  mod.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: approval.rs  cognitive_loop.rs  config_reload.rs  kernel.rs  lib.rs  llamacpp_server.rs  platform_boot.rs  platform_control.rs  registry.rs  self_destruct.rs  tactical_pipeline.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/openfang-kernel/tests/: autonomy_profile_matrix.rs  federation_gate_degradation.rs  federation_status.rs  mms_route_integration.rs  phase6_gates.rs  tactical_closed_loop.rs  uav_single_e2e.rs
crates/openfang-memory/src/: migration.rs
crates/openfang-platform/: Cargo.toml
crates/openfang-platform-arksim/: Cargo.toml
crates/openfang-platform-arksim/examples/: warlock_direct_probe.rs
crates/openfang-platform-arksim/src/: arkservice.rs  arksim_controller.rs  bridge.rs  cmd_log.rs  command_mapper.rs  command_sanitize.rs  component_manifest.rs  lib.rs  proto_manual.rs  response_handler.rs  sim_control.rs  situation.rs  state_mapper.rs  strike_protocol.rs  track_id.rs  zmq_sim_bridge.rs
crates/openfang-platform-arksim/tests/: contract_equivalence.rs
crates/openfang-platform-dds/: Cargo.toml
crates/openfang-platform-dds/src/: lib.rs  loopback.rs  publisher.rs  subscriber.rs  types.rs
crates/openfang-platform-dds/tests/: dds_vertical_slice.rs
crates/openfang-platform-mavlink/: Cargo.toml
crates/openfang-platform-mavlink/src/: codec.rs  lib.rs
crates/openfang-platform/src/: capabilities.rs  error.rs  lib.rs  mock.rs  noop.rs  registry.rs  snapshot.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: action_composer.rs  audio_dsp.rs  cca_role.rs  cerebellum.rs  cerebellum_services.rs  cms_service.rs  cognition.rs  cognitive_pipeline.rs  colregs.rs  comm_monitor.rs  command_gate.rs  copilot_oauth.rs  direct_channel.rs  engagement_guard.rs  ewms_service.rs  federation.rs  flank_geometry.rs  fleet_manager.rs  function_executor.rs  geo_zones.rs  health_monitor.rs  intent_extractor.rs  intervention.rs  kernel_handle.rs  lib.rs  maneuver_service.rs  mission_approval.rs  mission_compiler.rs  mission_config.rs  mission_registry.rs  mission_scheduler.rs  model_catalog.rs  nav_control.rs  navigation_service.rs  op_restrictions.rs  planning.rs  platform_allocator.rs  platform_tools.rs  play_registry.rs  playbook_scheduler.rs  (+17 more)
crates/openfang-runtime/src/drivers/: mod.rs
crates/openfang-runtime/tests/: brain_federation_e2e.rs  fleet_e2e.rs  nl_dsl_e2e.rs  sensor_management_service_test.rs  wms_policy_test.rs
crates/openfang-skills/src/: bundled.rs
crates/openfang-types/src/: agent.rs  capability.rs  cognition.rs  config.rs  lib.rs  mission_dsl.rs  model_catalog.rs  platform.rs  route.rs  semantic_frame.rs  tactical.rs  umaa.rs  wms.rs
crates/openfang-types/tests/: wms_policy_test.rs
docs/: plan-arksim.md  plan-tactical-vessel.md  plan-uav-mothership.md  plan-uav-single.md  prd-uav-mothership.md  prd-uav-single.md  prd-unmanned-vessel.md
docs/brainstorms/: 2026-06-11-arksim-command-lifecycle-trace-requirements.md
docs/proto/: ELU_FCS_交互契约_标准文档.md  ELU_TCS_交互契约_标准文档.md  ELU功能单元和API定义.md
protobuf/: ArkSIM_Rust开发指南.md  ArkService接口文档.html  arksimActions.proto  arksim_client_rust_port_reference.md  arksimproto.proto  interface_new.json  test_fire_at_target.py  test_warlock_tcp_controls.py  test_warlock_tcp_fire.py  usv_self_components.py  warlock_closed_loop_report.json  warlock_command_walkthrough.py  warlock_final.py  warlock_tcp_harness.py
protobuf/arkcmd/: __init__.py  setup.py
protobuf/arkcmd/arkcmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
protobuf/arkcmd/controller/: Arksim_controller.py  __init__.py
protobuf/arkcmd/proto/: __init__.py  arksimActions_pb2.py  arksimActions_pb2_grpc.py  proto_utils.py
protobuf/arkcomm/: __init__.py  response_handler.py  setup.py
protobuf/arkcomm/arkcomm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protobuf/arksense/: __init__.py  setup.py  situation_parser.py
protobuf/arksense/arksense.egg-info/: PKG-INFO  SOURCES.txt
scripts/: add_dds_ws.py  add_deps.py  build_check.bat  build_release.bat  build_workspace.bat  decode_response.py  fix_dcc.py  fix_errors.py  fix_failures.py  fix_kalman.py  fix_kernel.py  fix_tests.py  full_review.py  investigate_wire.py  quick_fix.py  run_tests.bat  setup_config.py  start_daemon.bat  start_llamacpp.bat  test_connect.py  test_final.py  test_ref_proto.py
tactical-assets/agents/ca/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/fca/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/fma/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/hma/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/mc/: promt.md
tactical-assets/agents/na/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/ora/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/sma/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/tca/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/uav-cca/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/agents/uav-lsuav/: SYSTEM_PROMPT.md  agent.toml
tactical-assets/config/: arksim.usv_loiter_strike.components.toml  openfang.tactical.toml.example
tactical-assets/skills/electronic-warfare/: SKILL.md
tactical-assets/skills/fleet-coordination/: SKILL.md
tactical-assets/skills/maritime-navigation/: SKILL.md
tactical-assets/skills/tactical-engagement/: SKILL.md
tactical-assets/workflows/: tactical_workflows.toml
(+3 files in other folders)
