[package]
name = "openfang-platform-arksim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ArkSIM platform adapter — hand-coded protobuf, zero external build deps"

[dependencies]
openfang-platform = { path = "../openfang-platform" }
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true, features = ["net", "io-util"] }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
zmq = "0.10"
