[package]
name = "openfang-platform-mavlink"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MAVLink platform adapter — single-UAV (CCA / LSUAV) autopilot link (motion + telemetry; no weapon/EW)"

[dependencies]
openfang-platform = { path = "../openfang-platform" }
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
